--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/leavemanagement
+spring.datasource.url= jdbc:mysql://localhost:3306/leavemanagement?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.springframework=info
-logging.level.com.perennialsys=debug
+spring.jpa.hibernate.ddl-auto=none
+
+
